--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ bs4==0.0.2
 colorama==0.4.6
 cssselect==1.3.0
 Django==5.1.7
+django-allauth==0.57.2
 django-environ==0.12.0
 fake-useragent==2.1.0
 importlib_metadata==8.6.1
@@ -11,17 +12,21 @@ iniconfig==2.0.0
 lxml==5.3.1
 lxml_html_clean==0.4.1
 numpy==2.2.4
+oauthlib==3.2.2
 packaging==23.2
 pandas==2.2.3
 parse==1.20.2
 pluggy==1.4.0
 psycopg2-binary==2.9.10
 pyee==11.1.1
+PyJWT==2.10.1
 pyppeteer==2.0.0
 pyquery==2.0.1
 pytest==8.0.1
+python3-openid==3.2.0
 pytz==2025.2
 requests-html==0.10.0
+requests-oauthlib==2.0.0
 sqlparse==0.5.3
 tqdm==4.67.1
 tzdata==2025.1
