--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ Django==5.1.7
 django-allauth==0.57.2
 django-environ==0.12.0
 fake-useragent==2.1.0
+gunicorn==23.0.0
 importlib_metadata==8.6.1
 iniconfig==2.0.0
 lxml==5.3.1
