--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ asgiref==3.8.1
 bs4==0.0.2
 colorama==0.4.6
 cssselect==1.3.0
+dj-database-url==2.3.0
 Django==5.1.7
 django-allauth==0.57.2
 django-environ==0.12.0
